# Grativities

./: CMakeLists.txt  compile_commands.json  main.cpp
include/core/: colors.hpp  settings.hpp
include/types/: FreeList.hpp
src/game/: game.cpp  game.hpp
src/matter/: matter.hpp
src/physicsSystem/: physics.cpp  physics.hpp
src/quantities/: quantities.cpp  quantities.hpp
